test/valid/IntegerCollections/TestBinaryTreeRootEmpty.plume
/**
 * A class to test the root() operation in and empty tree.
 *
 * @author Diogo Marques, 30100
 */
class TestBinaryTreeRootEmpty extends Object is
	
	method main : () -> String is
 		new BinaryTreeEmpty().root().toString()